cabal-version: 2.4
name: juice
version: 0.1.0.0
synopsis: Compress JSON
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
build-type: Simple
extra-source-files:
  CHANGELOG.md
  samples/hawaii.json

library
  exposed-modules: Juice
  build-depends:
    , base >=4.12 && <5
    , bytebuild >=0.3.4 && <0.4
    , primitive >=0.7 && <0.8
    , json-syntax >=0.2 && <0.3
    , natural-arithmetic >=0.1.2
    , scientific-notation
    , array-chunks
    , vex-unified
    , byteslice
    , text-short
    , bytestring
    , bytesmith
    , containers
    , contiguous >=0.6.1
  ghc-options: -O2 -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12 && <5
    , bytebuild
    , byteslice
    , directory
    , json-syntax
    , juice

benchmark bench-size
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: bench-size
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12 && <5
    , bytebuild
    , byteslice
    , compact
    , directory
    , json-syntax
    , juice

benchmark bench-decode
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: bench-decode
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12 && <5
    , bytebuild
    , byteslice
    , gauge
    , directory
    , json-syntax
    , juice
